fixed doubling ode

--- a/FeigenbaumLikeODESystem/RK4doubling.ipynb
+++ b/FeigenbaumLikeODESystem/RK4doubling.ipynb
@@ -177,18 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "f-string: empty expression not allowed (751311931.py, line 30)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_372324/751311931.py\"\u001b[0;36m, line \u001b[0;32m30\u001b[0m\n\u001b[0;31m    plt.savefig(f'RK4doubling_c{}.png')\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string: empty expression not allowed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step size\n",
     "dt = 0.001\n",
@@ -202,7 +193,7 @@
     "\n",
     "counter=1\n",
     "fig = plt.figure(figsize=(20,10))\n",
-    "for c in [0.1,1.3,1.5,1.52,1.65]:\n",
+    "for c in [0.1,1.3,1.5,1.52,1.6,1.65]:\n",
     "\n",
     "    u, t = ode_RK4(f, np.array([-0.201,-0.001,0.41]), dt, T,a,b,c,d)\n",
     "\n",
@@ -219,7 +210,7 @@
     "    ax.text2D(0.1, 0.85, f'c={c}',fontsize=12, transform=ax.transAxes)\n",
     "    counter = counter+1\n",
     "\n",
-    "plt.savefig(f'RK4doubling_c{}.png')"
+    "plt.savefig(f'RK4doubling.png')"
    ]
   },
   {
